--- a/css/loan_calculator_style.css
+++ b/css/loan_calculator_style.css
@@ -173,6 +173,8 @@ input[type="range"]::-webkit-slider-thumb{
 .s-p4{
     font-size: 25px;
     text-align: center;
+    text-decoration: underline;
+    margin-bottom: 40px;
 }
 
 .s-p5{
